--- a/Section5-NumPy/Operações com Matrizes.ipynb
+++ b/Section5-NumPy/Operações com Matrizes.ipynb
@@ -19,12 +19,8 @@
    },
    "outputs": [],
    "source": [
-    "joao_pts = [20,30,40,15]\n",
-    "pedro_pts = [100,24,48,23]\n",
-    "maria_pts = [92,22,34,12]\n",
-    "marcos_pts = [12,34,12,43]\n",
-    "\n",
-    "pontos = np.array([joao_pts,pedro_pts,maria_pts,marcos_pts])"
+    "m1 = np.array([[1,2,3],[4,5,6]])\n",
+    "m2 = np.array([[7,8,9],[10,11,12]])"
    ]
   },
   {
@@ -37,10 +33,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 20,  30,  40,  15],\n",
-       "       [100,  24,  48,  23],\n",
-       "       [ 92,  22,  34,  12],\n",
-       "       [ 12,  34,  12,  43]])"
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
       ]
      },
      "execution_count": 3,
@@ -49,7 +43,7 @@
     }
    ],
    "source": [
-    "pontos"
+    "m1"
    ]
   },
   {
@@ -62,7 +56,8 @@
     {
      "data": {
       "text/plain": [
-       "array([20, 30, 40, 15])"
+       "array([[ 7,  8,  9],\n",
+       "       [10, 11, 12]])"
       ]
      },
      "execution_count": 4,
@@ -71,7 +66,7 @@
     }
    ],
    "source": [
-    "pontos[0]"
+    "m2"
    ]
   },
   {
@@ -84,7 +79,8 @@
     {
      "data": {
       "text/plain": [
-       "100"
+       "array([[ 7. ,  4. ,  3. ],\n",
+       "       [ 2.5,  2.2,  2. ]])"
       ]
      },
      "execution_count": 5,
@@ -93,7 +89,7 @@
     }
    ],
    "source": [
-    "pontos[1][0]"
+    "m2 / m1"
    ]
   },
   {
@@ -104,16 +100,19 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 7.,  4.,  3.],\n",
+       "       [ 2.,  2.,  2.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_data = np.arange(0,20)\n",
-    "print(my_data)"
+    "np.matrix.round(m2 / m1)"
    ]
   },
   {
@@ -124,20 +123,19 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0  1  2  3]\n",
-      " [ 4  5  6  7]\n",
-      " [ 8  9 10 11]\n",
-      " [12 13 14 15]\n",
-      " [16 17 18 19]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 7,  8,  9],\n",
+       "       [10, 11, 12]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat1 = np.reshape(my_data, (5,4))\n",
-    "print(mat1)"
+    "m2"
    ]
   },
   {
@@ -150,7 +148,8 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "array([[ 70,  80,  90],\n",
+       "       [100, 110, 120]])"
       ]
      },
      "execution_count": 8,
@@ -159,7 +158,7 @@
     }
    ],
    "source": [
-    "mat1[2,2]"
+    "10 * m2"
    ]
   },
   {
@@ -172,7 +171,8 @@
     {
      "data": {
       "text/plain": [
-       "24"
+       "array([[ 6,  7,  8],\n",
+       "       [ 9, 10, 11]])"
       ]
      },
      "execution_count": 9,
@@ -181,20 +181,30 @@
     }
    ],
    "source": [
-    "pontos.item(5)"
+    "m1 + 5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6,  7,  8],\n",
+       "       [ 9, 10, 11]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "m1 = ['python', 'eh', 'legal']\n",
-    "m2 = ['guido', 'van', 'rossum']\n",
-    "m3 = [10,20,30]"
+    "m2 - 1"
    ]
   },
   {
@@ -207,7 +217,8 @@
     {
      "data": {
       "text/plain": [
-       "[['python', 'eh', 'legal'], ['guido', 'van', 'rossum'], [10, 20, 30]]"
+       "array([[ 1,  4,  9],\n",
+       "       [16, 25, 36]])"
       ]
      },
      "execution_count": 11,
@@ -216,32 +227,7 @@
     }
    ],
    "source": [
-    "[m1,m2,m3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([['python', 'eh', 'legal'],\n",
-       "       ['guido', 'van', 'rossum'],\n",
-       "       ['10', '20', '30']], \n",
-       "      dtype='<U6')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([m1,m2,m3])"
+    "m1 ** 2"
    ]
   },
   {
