--- a/Section5-NumPy/Anexar ao final da Array.ipynb
+++ b/Section5-NumPy/Anexar ao final da Array.ipynb
@@ -15,11 +15,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "arr = np.array([1,2,3])"
+    "#append\n",
+    "a = np.array([1,2,3])\n",
+    "a"
    ]
   },
   {
@@ -32,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1, 10,  2,  3])"
+       "array([1, 2, 3, 4, 5, 6])"
       ]
      },
      "execution_count": 3,
@@ -41,7 +54,7 @@
     }
    ],
    "source": [
-    "np.insert(arr,1,10)"
+    "np.append(a, [4,5,6])"
    ]
   },
   {
@@ -52,19 +65,42 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2]\n",
-      " [3 4]]\n",
-      "2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.array([[1,2],[3,4]])\n",
-    "print(a)\n",
-    "print(a.ndim)"
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.append(a, [[5,6]])"
    ]
   },
   {
@@ -75,64 +111,20 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 6]\n",
-      "[3 7]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a.sum(axis=0))\n",
-    "print(a.sum(axis=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "array([[1, 5, 2],\n",
-       "       [3, 5, 4]])"
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.insert(a,1,5,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5, 5],\n",
-       "       [1, 2],\n",
-       "       [3, 4]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.insert(a,0,5,axis=0)"
+    "np.append(a, [[5,6]], axis=0)"
    ]
   },
   {
