--- a/Section5-NumPy/Deletando.ipynb
+++ b/Section5-NumPy/Deletando.ipynb
@@ -15,11 +15,25 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "arr = np.array([1,2,3])"
+    "a = np.array([[1,2],[3,4],[5,6]])\n",
+    "a"
    ]
   },
   {
@@ -32,7 +46,8 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1, 10,  2,  3])"
+       "array([[1, 2],\n",
+       "       [5, 6]])"
       ]
      },
      "execution_count": 3,
@@ -41,7 +56,7 @@
     }
    ],
    "source": [
-    "np.insert(arr,1,10)"
+    "np.delete(a, 1, 0)#esse último é o eixo"
    ]
   },
   {
@@ -52,40 +67,46 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2]\n",
-      " [3 4]]\n",
-      "2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[2],\n",
+       "       [4],\n",
+       "       [6]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([[1,2],[3,4]])\n",
-    "print(a)\n",
-    "print(a.ndim)"
+    "np.delete(a,0,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 6]\n",
-      "[3 7]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [ 4,  5,  6],\n",
+       "       [ 7,  8,  9],\n",
+       "       [10, 11, 12]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(a.sum(axis=0))\n",
-    "print(a.sum(axis=1))"
+    "a = np.array([[1,2,3],[4,5,6],[7,8,9],[10,11,12]])\n",
+    "a"
    ]
   },
   {
@@ -98,8 +119,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 5, 2],\n",
-       "       [3, 5, 4]])"
+       "array([[ 4,  5,  6],\n",
+       "       [10, 11, 12]])"
       ]
      },
      "execution_count": 7,
@@ -108,31 +129,7 @@
     }
    ],
    "source": [
-    "np.insert(a,1,5,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5, 5],\n",
-       "       [1, 2],\n",
-       "       [3, 4]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.insert(a,0,5,axis=0)"
+    "np.delete(a,np.s_[::2],0)"
    ]
   },
   {
