--- a/Section5-NumPy/Repetindo com tile.ipynb
+++ b/Section5-NumPy/Repetindo com tile.ipynb
@@ -15,11 +15,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "arr = np.array([1,2,3])"
+    "a = np.array([1,2,3])\n",
+    "a"
    ]
   },
   {
@@ -32,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1, 10,  2,  3])"
+       "array([1, 2, 3, 1, 2, 3])"
       ]
      },
      "execution_count": 3,
@@ -41,7 +53,7 @@
     }
    ],
    "source": [
-    "np.insert(arr,1,10)"
+    "np.tile(a,2)"
    ]
   },
   {
@@ -52,87 +64,43 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2]\n",
-      " [3 4]]\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.array([[1,2],[3,4]])\n",
-    "print(a)\n",
-    "print(a.ndim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 6]\n",
-      "[3 7]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a.sum(axis=0))\n",
-    "print(a.sum(axis=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "array([[1, 5, 2],\n",
-       "       [3, 5, 4]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.insert(a,1,5,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5, 5],\n",
-       "       [1, 2],\n",
+       "array([[1, 2],\n",
        "       [3, 4]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.insert(a,0,5,axis=0)"
+    "b = np.array([[1,2],[3,4]])\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 1, 2],\n",
+       "       [3, 4, 3, 4]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.tile(b,2)"
    ]
   },
   {
